Dev: Fixed bug that made letters drop out of bounds

--- a/static/index.css
+++ b/static/index.css
@@ -41,7 +41,7 @@
 #submit-button {
   border: 1px solid black;
   top: 1163px;
-  left: 824px;
+  left: 927px;
   width: 100px;
   height: 100px;
   position: absolute;
@@ -52,7 +52,7 @@
 #reset-button {
   border: 1px solid black;
   top: 1163px;
-  left: 926px;
+  left: 1028px;
   width: 100px;
   height: 100px;
   position: absolute;
@@ -63,7 +63,7 @@
 #score-board {
   border: 1px solid black;
   top: 1163px;
-  left: 1028px;
+  left: 823px;
   width: 100px;
   height: 98px;
   position: absolute;
